@@ -1048,6 +1048,65 @@ if (Test-Path $java) {
     }
 }
 
+if (Test-Path $netbanner) {
+    $sv = $null
+    $ipv = $null
+    $install = $false
+    $pn = "NetBanner"
+    $sv = Get-Content $netbanner\SoftwareVersion.txt
+    $ipv = ($ip | Where-Object {$_.ProgramName -like "Microsoft NetBann*"} | Select-Object Version)[0].Version
+
+    if ($null -ne $ipv -or $ipv -ne "") {
+        $ipv = $ipv.Split('.')
+        $ipv = $ipv.Split(' ')
+    }
+    $sv = $sv.Split('.')
+    $sv = $sv.Split(' ')
+
+    #Determine if need to install
+    if ($null -ne $ipv -or $ipv -ne "") {
+        if ($sv[0] -gt $ipv[0]) {
+            $install = $true
+        }
+        elseif ($sv[0] -eq $ipv[0]) {
+            if ($sv[1] -gt $ipv[1]) {
+                $install = $true
+            }
+            elseif ($sv[1] -eq $ipv[1]) {
+                #$install = $false #uncomment and remove below lines if stopping at Major.Minor
+                if ($sv[2] -gt $ipv[2]) {
+                    $install = $true
+                }
+                elseif ($sv[2] -eq $ipv[2]) {
+                    $install = $false
+                }
+                elseif ($sv[2] -lt $ipv[2]) {
+                    $install = $false
+                }
+            }
+            elseif ($sv[1] -lt $ipv[1]) {
+                $install = $false
+            }
+        }
+        elseif ($sv[0] -lt $ipv[0]) {
+            $install = $false
+        }
+    }#if already installed
+    else {
+        $install = $true
+    }
+
+    #Install or not
+    if ($install -eq $true) {
+        Write-Output "$cn`: Installing $pn."
+        Start-Process $netbanner\Deploy-application.exe -ArgumentList "-DeployMode 'NonInteractive'" -NoNewWindow -Wait
+        Start-Sleep 200
+    }
+    else {
+        Write-Output "$cn`: $pn same as installed version or older. Skipping..."
+    }
+}
+
 if (Test-Path $onedrive) {
     Write-Output "$cn`: Installing OneDrive."
     Start-Process $onedrive -ArgumentList "/AllUsers /Silent" -NoNewWindow -Wait
