@@ -131,7 +131,7 @@ $Global:WSToolsConfig = New-Object -TypeName PSObject -Property @{
     Chrome = "J:\Patches\SDC-APPS\Chrome"
     DSET = "J:\Patches\SDC-APPS\DSET"
     Edge = "J:\Patches\Edge"
-    Encase = "J:\Patches\SDC-APPS\Encase"
+    Encase = "J:\Patches\SDC-APPS\Encase\NIPR"
     Firefox = "J:\Patches\SDC-APPS\Firefox"
     InfoPath = "J:\Patches\SDC-APPS\InfoPath"
     Java = "J:\Patches\SDC-APPS\Java\NIPR"
